# JaxCont

./: .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_cuda.sh
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  README.md  RELEASING.md  SETUP_COMPLETE.md  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  quickstart.rst  roadmap.rst
examples/: GALLERY_HEADER.rst  __init__.py  debug_newton.py  demo_jit_speedup.py  example_01_pitchfork.py  example_02_lorenz.py  example_03_van_der_pol.py  example_04_continuation_methods.py  example_04_pseudo_arclength.py  example_04_pseudo_arclength_test.py  example_05_neural_mass.py  example_06_natural_continuation.py  example_06_vmap_sweep.py  example_07_plotting.py  example_08_vmap_sweep.py  example_09_differentiable.py  profile_continuation.py  test_installation.py  test_natural_continuation.py  test_plotting_fix.py
examples/BifurcationKit/: 01_pitchfork.jl  02_lorenz84.jl  03_neural_mass.jl
notes/: ARCHITECTURE.md  BEGINNERS_GUIDE_TO_BIFURCATION_ANALYSIS.md  PROJECT_REVIEW_2026-07.md  ROADMAP.md
notes/doc_plan/: Makefile  README.md  jaxcont_practical_bifurcation_guide.tex  plan.md
notes/engine_consolidation_slides/: METHOD.md  Makefile  README.md  SPEAKER_NOTES.md  engine_consolidation.tex  jaxcont_technical_presentation.tex
notes/old_plans/: BIFURCATION_DETECTION_IMPROVED.md  BISECTION_STATUS.md  BORDERED_NEWTON_VERIFIED.md  DEVELOPMENT.md  DOCUMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  INSTALL.md  NEXT_STEPS.md  (+5 more)
tests/: __init__.py  conftest.py  test_adaptive_stepsize.py  test_bifurcation_workflow.py  test_bifurcations.py  test_bisection.py  test_bordered_newton.py  test_collocation.py  test_continuation.py  test_differentiable_root.py  test_equinox_scaffold.py  test_functional_api.py  test_gpu_smoke.py  test_installation.py  test_newton.py  test_newton_jit.py  test_periodic_orbit_continuation.py  test_periodic_orbit_problem.py  test_pseudo_arclength.py  test_solver_protocols.py  test_solver_wiring.py  test_stability.py  test_taxonomy.py  test_van_der_pol_validation.py  test_viz.py
validation/: VALIDATION_EXAMPLES.md
(+69 files in other folders)
